# cpp-bindings

./: .gitignore  CMakeLists.txt  README.md  annotated.html  block_8h_source.html  block_8hpp_source.html  classLevelZ_1_1Block-members.html  classLevelZ_1_1Block.html  classLevelZ_1_1Coordinate2D-members.html  classLevelZ_1_1Coordinate2D.html  classLevelZ_1_1Coordinate3D-members.html  classLevelZ_1_1Coordinate3D.html  classes.html  coordinate_8h_source.html  coordinate_8hpp_source.html  dir_69b329ad395d66e31ba22e97399593f6.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.sh  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  level_8h_source.html  level_8hpp_source.html  levelz_8h_source.html  levelz_8hpp_source.html  matrix_8h_source.html  matrix_8hpp_source.html  menudata.js  renovate.json  structLevelZ_1_1Block-members.html  structLevelZ_1_1Block.html  structLevelZ_1_1Coordinate-members.html  structLevelZ_1_1Coordinate.html  structLevelZ_1_1Coordinate2D-members.html  structLevelZ_1_1Coordinate2D.html  structLevelZ_1_1Coordinate3D-members.html  (+15 more)
.github/workflows/: build.yml
docs/: Doxyfile.in
include/: levelz.h  levelz.hpp
include/levelz/: block.h  coordinate.h  level.h  level.hpp  matrix.h  matrix.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  pages_1.js  searchdata.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js
src/: levelz.cpp
test/: CMakeLists.txt
test/src/: block.cpp  coordinate.cpp  level.cpp  matrix.cpp  test.h
